# simple-cli-chess

./: .gitignore  CMakeLists.txt  README.md
assets/ui/: board.txt  main_menu.txt
include/: colors.hpp  game_loop.hpp  render.hpp  source_dir.hpp  utils.hpp
res/: colors.json  options.txt  positions.json
res/themes/: gruvbox.txt
res/themes/colors/: gruvbox.txt
src/: colors.cpp  game_loop.cpp  main.cpp  render.cpp  source_dir.cpp  utils.cpp
